Fix overflowing images in documentation (#392)
* add width and some margin-bottom to img.align-center, change spacing

--- a/docs/source/_static/custom.css
+++ b/docs/source/_static/custom.css
@@ -1,3 +1,9 @@
 td {
     padding: 0px 10px 0px 10px;
 }
+
+img.align-center {
+    width: 100%;
+    margin-bottom: 20px;
+    margin-top: 20px;
+}
